--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^5.0.0-alpha.8",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0"
   }
 }
