--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^5.0.0-alpha.8",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.1.3"
   }
 }
